<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>net.cattweasel.cropbytes</groupId>
	<artifactId>cropbytes-bot</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<properties>
		<java.version>1.8</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
	<dependencies>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.12</version>
		</dependency>
		<dependency>
    		<groupId>junit</groupId>
    		<artifactId>junit</artifactId>
    		<version>4.13.2</version>
    		<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-core</artifactId>
			<version>5.4.8.Final</version>
		</dependency>
		<dependency>
    		<groupId>mysql</groupId>
    		<artifactId>mysql-connector-java</artifactId>
    		<version>8.0.28</version>
		</dependency>
		<dependency>
		    <groupId>org.json</groupId>
		    <artifactId>json</artifactId>
		    <version>20220320</version>
		</dependency>
		<dependency>
  			<groupId>com.github.pengrad</groupId>
  			<artifactId>java-telegram-bot-api</artifactId>
  			<version>6.1.0</version>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>
			<plugin>
    			<groupId>org.codehaus.mojo</groupId>
    			<artifactId>findbugs-maven-plugin</artifactId>
    			<version>3.0.5</version>
    			<configuration>
        			<effort>Max</effort>
        			<findbugsXmlOutput>true</findbugsXmlOutput>
        			<xmlOutput>true</xmlOutput>
    			</configuration>
    			<executions>
        			<execution>
        				<phase>test</phase>
            			<goals>
                			<goal>check</goal>
            			</goals>
        			</execution>
    			</executions>
			</plugin>
			<plugin>
        		<groupId>org.apache.maven.plugins</groupId>
        		<artifactId>maven-pmd-plugin</artifactId>
        		<version>3.14.0</version>
        		<executions>
        			<execution>
        				<phase>test</phase>
            			<goals>
                			<goal>check</goal>
            			</goals>
        			</execution>
    			</executions>
      		</plugin>
		</plugins>
	</build>
</project>
